# snippets

c_cpp/svr_template_goome/: .gitignore  CMakeLists.txt  rsyncToDev.sh
c_cpp/svr_template_goome/src/: BoApp.cpp  BoApp.h  SConstruct  ThreadGmqProcessor.cpp  ThreadGmqProcessor.h  globals.cpp  globals.h  gmqdirectI.cpp  gmqdirectI.h  main.cpp  typedef.h
java/utils/security/: Encoders.java
java/utils/security/cipher/: BaseCipher.java  Cipher.java
python/: main.py
python/utils/: Errors.py  Logger.py  MySQLPool.py  __init__.py  config.py  globals.py
